# ad_palletizing

./: CMakeLists.txt  README.md  package.xml
code/: AN_Mission.py  AN_Mission_python.py  AN_Mission_two.py  AN_Mission_two_python.py  AN_Vision.py  AN_Vision_python.py  AN_Vision_two.py  client_ros.py  client_ros_python.py  setup.py  test.py  test_python.py
deb/ubuntu18-melodic/: ros-melodic-ad-palletizing_0.0.0-0bionic_arm64.deb
deb/ubuntu20-noetic/: ros-noetic-ad-palletizing_0.0.0-0focal_arm64.deb
launch/: AD_Palletizing.launch  ZY_AD.launch  ZY_AD_two.launch
scripts/: AN_Mission.py  AN_Vision.py  AN_Vision_two.py  ar_test.py  test.py
src/: palletizing.cpp
